feat: added nats scheduler
